# eskom-notifier

./: Cargo.toml  README.md
src/: area_details_page.rs  cache_handler.rs  configuration.rs  configuration_setup.rs  find_area_page.rs  helpers.rs  home.rs  home_page.rs  main.rs  settings_page.rs  setup.rs  traits.rs  updating_page.rs
src/layouts/: top.rs
tauri/Eskom Notifier/: Cargo.toml
tauri/Eskom Notifier/src-tauri/: Cargo.toml  tauri.conf.json
