[package]
name = "eskom-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
cron = "0.9.0"
chrono = "0.4.19"
eskom_se_push-api = { version ="0.2.0", features = ["reqwest","async"] }

